[build-system]
requires = ["setuptools~=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pre-commit-download"
version = "0.1.0"
description = "Build-backend for downloading external single file binaries."
readme = "README.md"
authors = [
    {name = "Pavel Kolomytsev", email = "pkolomytsev@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "setuptools~=69.0",
    "tomli~=2.0",
]

[project.urls]
Homepage = "https://github.com/pkolomytsev/pre-commit-download"

[project.optional-dependencies]
lint = [
    "Flake8-pyproject==1.2.3",
    "wemake-python-styleguide==0.18.0",
    "mypy==1.10.0",
    "black==24.4.2",
]
test = [
    "pytest==8.2.0",
]
dev = [
    "pre-commit==3.5.0",
    "nox==2024.4.15",
    "build==1.2.1",
    "twine==5.0.0",
    "pre-commit-download[lint]",
    "pre-commit-download[test]",
]

[tool.flake8]
inline-quotes = "double"
docstring_style = "sphinx"
max-line-length = 80
max-local-variables = 7
max-methods = 10
max-imports = 16
max-module-members = 10
ignore = [
    # Found upper-case constant in a class
    "WPS115",
    # Found `f` string
    "WPS305",
    # Found class without a base class
    "WPS306",
    # Whitespace before ':'
    "E203",
    # Found nested function
    "WPS430",
    # Found subclassing a builtin
    "WPS600",
    # Line break before binary operator
    "W503",
    # Found multiline conditions
    "WPS337",
]
per-file-ignores = [
    # Use of assert detected.
    "tests/*.py:S101",
    # Imported but unused
    # Unable to detect undefined names
    # Found vague import that may cause confusion: *
    # Found local folder import
    # Found protected module import
    "src/pre_commit_download/hooks.py:F401,F403,WPS300,WPS436,WPS347",
]
exclude = [
    "venv",
    ".venv",
    ".temp",
    ".eggs",
    "build",
    "dist",
    "__pycache__",
    ".git",
    ".nox",
]

[tool.isort]
force_sort_within_sections = true
lexicographical = true
order_by_type = false
group_by_package = true
include_trailing_comma = true
multi_line_output = 3
lines_after_imports = 2

[tool.black]
line-length = 80
target-version = ["py38"]

[tool.mypy]
exclude = "(^build|^tests)"

[[tool.mypy.overrides]]
module = [
    "setuptools.*",
    "nox",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
    "src",
]

[tool.setuptools.package-data]
"*" = ["py.typed"]
